# cursor-python

./: .gitignore  hello.py  pyproject.toml  requirements.txt
data/: d3_2013.csv  d3_2013_no_date.csv  d3_2013_ot.csv  d3_2013_sample.csv  p5_2005.csv
tests/: numpy_shape.ipynb  pd_iloc.ipynb
